--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
     margin: 0;
     padding: 0;
     font-family: "Times New Roman", Times, serif;
+    background-color: #d3d3d3; /* Medium gray */
+
 }
 
 .name {
