--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: "Times New Roman", Times, serif;
-}
 
-/* PARALLAX EFFECT */
-@keyframes parallaxScroll {
-    from { transform: translateY(0); }
-    to { transform: translateY(-50px); } /* Adjust this value for stronger effect */
-}
-
-.parallax {
-    animation: parallaxScroll linear;
-    animation-timeline: scroll();
 }
 
 .name {
@@ -51,16 +41,9 @@
     transition: background-size 0ms;
     --bg-h: 100%;
 }
-
-/* Apply parallax effect */
-.bio, .projects {
-    position: relative; /* Needed for animation */
-    animation: parallaxScroll linear both;
-    animation-timeline: scroll(root);
-}
-
-body {
-    min-height: 200vh; /* Ensures scrolling space */
+.projects:where(:hover, :focus-visible) {
+    background-size: 100% var(--bg-h);
+    background-position-x: left;
 }
 
 .bio {
@@ -114,7 +97,6 @@ body {
     font-style: italic;
     font-size: smaller;
 }
-
 @media (max-width: 1000px) {
     .images {
         width: 100%;
